<resources>
    <string name="app_name">DD_DespesasEmDia</string>
    <string name="imagem_que_representa_usuario">Imagem que representa usuario</string>
    <string name="username">UserName</string>
    <string name="hist_rico_de_gastos">Histórico de Gastos</string>
    <string name="r_0_00">R$ 0.00</string>
    <string name="botao_para_adicionar_despesa">Botao para adicionar despesa</string>
    <string name="botao_para_voltar_para_tela_inicial">Botao para voltar para tela inicial</string>
    <string name="botao_para_ir_para_despesas">Botao para ir para despesas</string>
    <string name="botao_para_ir_tela_de_grupo">Botao para ir tela de grupo</string>
    <string name="botao_para_voltar_pra_tela_anterior">Botao para voltar pra tela anterior</string>
    <string name="digite_o_valor_da_despesa">Digite o valor da despesa</string>
    <string name="valor">Valor</string>
    <string name="digite_o_nome_da_categoria">Digite o nome da categoria</string>
    <string name="categoria">Categoria</string>
    <string name="despesas">Despesas</string>
    <string name="texto_que_mostra_a_despesa_total_de_uma_categoria_de_despesa">Texto que mostra a despesa total de uma categoria de despesa</string>
    <string name="r_0_01">R$ 0.01</string>
    <string name="nome_da_despesa">Nome da Despesa</string>
    <string name="imagem_que_representa_o_grupo">Imagem que representa o grupo</string>
    <string name="valor_total_da_despesa_do_grupo">Valor Total da Despesa do Grupo</string>
    <string name="sair_do_grupo">Sair do Grupo</string>
    <string name="participantes">Participantes</string>
    <string name="botao_para_adicionar_integrante">Botao para Adicionar Integrante</string>
    <string name="enviar">Enviar</string>
    <string name="digite_o_email_da_pessoa">Digite o email da pessoa</string>
    <string name="digite_o_email_do_participante">Digite o email do participante</string>
    <string name="adicionar_pessoa_no_grupo">Adicionar Pessoa no Grupo</string>
    <string name="criar_grupo">Criar Grupo</string>
    <string name="informe_o_nome_do_grupo">Informe o Nome do Grupo</string>
    <string name="digite_o_nome_do_grupo">Digite o Nome do Grupo</string>
    <string name="criar">Criar</string>
    <string name="deletar">Deletar</string>
    <string name="adicionar">Adicionar</string>
    <string name="despesas_do_grupo">Despesas do Grupo</string>
    <string name="alimenta_o">Alimentação</string>
    <string name="_10_10_1010">10/10/1010</string>
    <string name="botao_para_deletar_despesa_unica">Botao para deletar despesa unica</string>
    <string name="nomeuser">NomeUser</string>
    <string name="imagem_que_representa_a_despesa">Imagem que representa a despesa</string>
    <string name="nomedadespesa">NomeDaDespesa</string>
    <string name="gruponame">GrupoName</string>
    <string name="botao_para_criar_grupo">Botao para criar grupo</string>
    <string name="grupos">Grupos</string>
    <string name="criar_novo_grupo">Criar Novo Grupo</string>
    <string name="botao_do_grupo">Botao do grupo</string>
    <string name="id_despesa">ID Despesa</string>
    <string name="deseja_realmente_deletar">Deseja realmente deletar?</string>
    <string name="defini_es">Definições?</string>
    <string name="informa_es_gerais">INFORMAÇÕES GERAIS?</string>
    <string name="edi_o">EDIÇÃO</string>
    <string name="adicionar_em_grupos">Adicionar em grupos</string>
    <string name="deletar_despesa">Deletar despesa</string>
    <string name="criar_conta">Criar conta</string>
    <string name="sim">SIM</string>
    <string name="nao">NAO</string>
    <string name="digite_o_email">Digite o Email</string>
    <string name="digite_o_nome">Digite o Nome</string>
    <string name="nome">Nome</string>
    <string name="email">Email</string>
    <string name="login">Login</string>
    <string name="digite_a_senha">Digite a Senha</string>
    <string name="senha">Senha</string>
</resources>